[package]
name = "jupiter-cpi"
version = "4.0.5"
edition = "2021"
description = "Anchor CPI client for the Jupiter program."
authors = ["Siong Ong <siong@raccoons.dev>"]
repository = "https://github.com/jup-ag/jupiter-cpi"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "jupiter"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = { git = "https://github.com/debridge-finance/anchor.git", tag = "v0.28.0-dev.debridge.6"}
solana-program = "1.16.0"
